test/files/pos/t596.scala
trait T1 {
  protected abstract class C
}

trait T2 extends T1 {
  class D extends C
}
