test/files/neg/t0699/B.scala
object B {
  trait T1 extends A.T
  trait T2 extends A.C
  class C1 extends A.C
}
